fix: light theme text contrast, overflow

--- a/src/app.scss
+++ b/src/app.scss
@@ -9,7 +9,7 @@
 	--color-text: #000;
 	--color-text--body: #444;
 	--color-text--accent: #2283f1;
-	--color-text--accent-contrast: #5b9ce4;
+	--color-text--accent-contrast: #2965a8;
 	--color-text--footer: #ddd;
 
 	--font-xl: 6rem;
